# javelin-video-analysis

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEDIAPIPE_INSTALL_GUIDE.md  PR_TEMPLATE.md  README.md  admin_app.py  create_test_video.py  docker-compose.yml  job_manager.py  pyproject.toml  requirements-web.txt  requirements.txt  run.py  run_anaconda.bat  test_mediapipe_311.py  worker.py
.streamlit/: config.toml
blender_bridge/: README.md
configs/: advanced_metrics.yaml  annotation.yaml  beta_release_config.yaml  color_ranges.yaml  dashboard.yaml  default.yaml  metric_labels.yaml  phase_detection.yaml  phases.yaml  plans.yaml  pricing_plans.yaml  tracking.yaml  visuals.example.yaml
docs/: BLENDER_INTEGRATION.md  CONFIGURATION.md  PLUGIN_DEVELOPMENT.md  advanced_metrics_design.md  advanced_metrics_export_format.md  annotation_design.md  annotation_export_format.md  background_worker.md  beta_application_form_spec.md  beta_feedback_form_spec.md  beta_operations_manual.md  beta_release_checklist.md  beta_user_explanation.md  colab_snippet.md  consent_template.md  deployment_guide.md  google_form_integration.md  google_form_template.md  line_official_account_guide.md  metrics_interpretation_guide.md  metrics_reliability.md  public_dashboard_api.md  public_release_checklist.md  s3_cors.json  s3_delivery_setup.md  security_checklist.md  training_data_policy.md  user_dashboard_design.md  video_submission_guide.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+156 files in other folders)
