
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "javelin-video-analysis"
version = "0.1.0"
description = "Javelin throw video analysis and visualization toolkit."
requires-python = ">=3.10"
authors = [
	{ name = "s4t02h1" }
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
	"opencv-python",
	"numpy",
	"pyyaml",
	"pydantic>=2",
	"boto3",
	"fastapi",
	"uvicorn[standard]",
	"jinja2",
	"python-multipart"
]

[project.scripts]
jva = "jva.cli:main"

[tool.setuptools.packages.find]
where = ["src"]